sample-app/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app
spec:
  gateways:
    - istio-ingressgateway
  hosts:
    - sample-app.org
  http:
    - route:
        - destination:
            host: sample-app
